--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumError": "500npm stkb"
                 }
               ],
               "outputHashing": "all"
