--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^15.0.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.3.0",
     "ngx-device-detector": "^6.0.1",
+    "ngx-webstorage": "8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@angular/localize": "~11.2.14"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.10",
